# depsguard

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: audit.yml  auto-assign-issues.yml  ci.yml  dev-release.yml  notify-maintainers-on-issue.yml  pages.yml  release.yml
.serena/: project.yml
Formula/: depsguard.rb
bucket/: depsguard.json
docs/: demo.cast  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  robots.txt  site.css  site.js  sitemap.xml  tailwind.config.js
docs/.well-known/agent-skills/: index.json
docs/.well-known/agent-skills/depsguard/: SKILL.md
docs/apt/: gpg.key  index.html
docs/apt/dists/stable/: InRelease  Release  Release.gpg
docs/apt/dists/stable/main/binary-amd64/: Packages
docs/apt/dists/stable/main/binary-arm64/: Packages
docs/apt/pool/main/d/depsguard/: depsguard_0.1.19_amd64.deb  depsguard_0.1.19_arm64.deb  depsguard_0.1.20_amd64.deb  depsguard_0.1.20_arm64.deb  depsguard_0.1.21_amd64.deb  depsguard_0.1.21_arm64.deb  depsguard_0.1.22_amd64.deb  depsguard_0.1.22_arm64.deb  depsguard_0.1.23_amd64.deb  depsguard_0.1.23_arm64.deb  depsguard_0.1.24_amd64.deb  depsguard_0.1.24_arm64.deb  depsguard_0.1.25_amd64.deb  depsguard_0.1.25_arm64.deb  depsguard_0.1.26_amd64.deb  depsguard_0.1.26_arm64.deb  depsguard_0.1.27_amd64.deb  depsguard_0.1.27_arm64.deb  depsguard_0.1.28_amd64.deb  depsguard_0.1.28_arm64.deb  depsguard_0.1.29_amd64.deb  depsguard_0.1.29_arm64.deb  depsguard_0.1.30_amd64.deb  depsguard_0.1.30_arm64.deb  depsguard_0.1.31_amd64.deb  depsguard_0.1.31_arm64.deb  depsguard_0.1.32_amd64.deb  depsguard_0.1.32_arm64.deb  depsguard_0.1.33_amd64.deb  depsguard_0.1.33_arm64.deb  depsguard_0.1.34_amd64.deb  depsguard_0.1.34_arm64.deb  depsguard_0.1.35_amd64.deb  depsguard_0.1.35_arm64.deb  depsguard_0.1.36_amd64.deb  depsguard_0.1.36_arm64.deb  depsguard_0.1.37_amd64.deb  (+5 more)
docs/axios-npm-attack/: index.html
docs/block-exotic-subdeps/: index.html
docs/cooldown/: index.html
docs/guide/: index.html
docs/ignore-scripts/: index.html
docs/img/favicon/: site.webmanifest
docs/shai-hulud/: index.html
docs/strict-dep-builds/: index.html
docs/tanstack-npm-attack/: index.html
docs/trust-policy/: index.html
packaging/aur/: PKGBUILD
packaging/conda/recipe/: meta.yaml
packaging/homebrew/: depsguard.rb.in
packaging/scoop/: depsguard.json.in
scripts/release/: publish-apt-repo.sh  publish-homebrew-core.sh  publish-homebrew-tap.sh  publish-scoop-bucket.sh
src/: exec.rs  fix.rs  main.rs  manager.rs  term.rs  ui.rs
src/manager/: aube.rs  bun.rs  bundler.rs  config.rs  date.rs  dependabot.rs  detect.rs  docker.rs  mod.rs  npm.rs  paths.rs  pip.rs  pnpm.rs  poetry.rs  renovate.rs  search.rs  types.rs  uv.rs  version.rs  yarn.rs
tests/: cross_platform.rs  integration.rs
